Fixed compatibility issues with Mac OS

--- a/projects/ImGuiExample/CMakeLists.txt
+++ b/projects/ImGuiExample/CMakeLists.txt
@@ -10,5 +10,5 @@ SET(files_example ${example_headers} ${example_sources})
 SOURCE_GROUP("example" FILES ${files_example})
 
 ADD_EXECUTABLE(ImGuiExample ${files_example})
-TARGET_LINK_LIBRARIES(ImGuiExample core render)
-ADD_DEPENDENCIES(ImGuiExample core render)
+TARGET_LINK_LIBRARIES(ImGuiExample core render glm_static)
+ADD_DEPENDENCIES(ImGuiExample core render glm_static)
