--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,30 @@
-#--------------------------------------------------------------------------
-# gscept laboration environment
-#--------------------------------------------------------------------------
-PROJECT(gscept_lab_env)
+PROJECT(lab_env)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
 
-MACRO(TARGET_PCH target path)
-IF(WIN32)
-	IF(MSVC)
-		SET_TARGET_PROPERTIES(${target}
-			PROPERTIES 
-			COMPILE_FLAGS "/Yuconfig.h /Fp${CMAKE_CFG_INTDIR}/${target}.pch")
-		SET_SOURCE_FILES_PROPERTIES(${path}config.cc
-            PROPERTIES
-            COMPILE_FLAGS "/Ycconfig.h")
-	ENDIF()
-ENDIF()
-ENDMACRO(TARGET_PCH)
-
-IF(CMAKE_COMPILER_IS_GNUCXX OR APPLE)
+IF(CMAKE_COMPILER_IS_GNUCXX)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+ENDIF()
+IF(APPLE)
+	SET(CMAKE_CXX_FLAGS "-g -std=c++11 -stdlib=libc++")
 ENDIF()
 
 IF(MSVC)
     SET(OPENGL_LIBS opengl32.lib)
+ELSEIF(APPLE)
+	add_definitions(-Wno-deprecated-declarations)
+	find_package(OpenGL REQUIRED)
+	SET(OPENGL_LIBS pthread ${OPENGL_LIBRARIES})
 ELSE()
-    SET(OPENGL_LIBS GL GLU X11 Xxf86vm pthread Xrandr Xi Xinerama Xcursor)
+    SET(OPENGL_LIBS GL X11 Xxf86vm pthread Xrandr Xi Xinerama Xcursor)
 ENDIF()
 
-SET(GSCEPT_LAB_ENV_ROOT ${CMAKE_CURRENT_DIR})
+SET(LAB_ENV_ROOT ${CMAKE_CURRENT_DIR})
 
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/bin>)
+if (MSVC)
+	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/bin>)
+else()
+	SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+endif()
 
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS GLEW_STATIC)
 ADD_SUBDIRECTORY(exts)
