--- a/projects/example/CMakeLists.txt
+++ b/projects/example/CMakeLists.txt
@@ -9,5 +9,5 @@ SET(files_example ${example_headers} ${example_sources})
 SOURCE_GROUP("example" FILES ${files_example})
 
 ADD_EXECUTABLE(example ${files_example})
-TARGET_LINK_LIBRARIES(example core render)
-ADD_DEPENDENCIES(example core render)
+TARGET_LINK_LIBRARIES(example core render glm_static)
+ADD_DEPENDENCIES(example core render glm_static)
