--- a/projects/example/CMakeLists.txt
+++ b/projects/example/CMakeLists.txt
@@ -2,6 +2,7 @@
 # example project
 #--------------------------------------------------------------------------
 
+PROJECT(example)
 FILE(GLOB example_headers code/*.h)
 FILE(GLOB example_sources code/*.cc)
 
